--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@types/react": "^16.9.6",
+    "@types/react-dom": "^16.9.2",
     "css-loader": "^3.2.0",
     "react": "^16.10.2",
+    "react-dom": "^16.10.2",
     "style-loader": "^1.0.0",
     "ts-loader": "^6.2.0",
     "typescript": "^3.6.4",
