--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/react": "^16.9.6",
     "@types/react-dom": "^16.9.2",
     "css-loader": "^3.2.0",
+    "prettier": "^1.18.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "style-loader": "^1.0.0",
