--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "@types/react": "^16.9.6",
     "@types/react-dom": "^16.9.2",
+    "@types/webpack": "^4.39.3",
+    "@types/webpack-env": "^1.14.1",
     "css-loader": "^3.2.0",
     "prettier": "^1.18.2",
     "react": "^16.10.2",
