--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "webpack": "^4.41.1",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2"
+  },
+  "devDependencies": {
+    "typescript-plugin-styled-components": "^1.4.3"
   }
 }
