--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "style-loader": "^1.0.0",
+    "styled-components": "^4.4.0",
     "ts-loader": "^6.2.0",
     "typescript": "^3.6.4",
     "webpack": "^4.41.1",
