--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@reach/router": "^1.2.1",
+    "@types/reach__router": "^1.2.6",
     "@types/react": "^16.9.6",
     "@types/react-dom": "^16.9.2",
+    "@types/styled-components": "^4.1.19",
     "@types/webpack": "^4.39.3",
     "@types/webpack-env": "^1.14.1",
     "css-loader": "^3.2.0",
